--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ body{
 	text-align: center;
 	text-decoration: none;
 
-    color: #000;
+    color: #FF9400;
     font-size: 40px;
 }
 
 .fa:hover{
-    opacity: 0.9;
+    opacity: 0.5;
 }
 
 
@@ -56,13 +56,14 @@ a.nav{
 
 
     
-}   
+}
+
 a.nav:hover {
     color: #777;
 }
 
 h1.name{
-
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     font-family: 'Bebas Neue', cursive;
     font-style: normal;
     font-weight: normal;
@@ -89,7 +90,7 @@ h2.name{
 }
 
 h3.name{
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.12));
     font-family: 'Roboto';
     font-size: 20px;
     color: #999;
