--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ section.info{
 
 
 h1.info{
-    font-family: Hind;
+    font-family: Calabri;
     font-style: normal;
     font-weight: normal;
     font-size: 36px;
